src/output/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: db-config
        - secretRef:
            name: db-secret
        image: postgres:15
        name: db
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: db-volume-0
      volumes:
      - hostPath:
          path: C:\Instagram_Bot\compose-to-k8s\src\db-data
          type: DirectoryOrCreate
        name: db-volume-0
