src/output/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-svc
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: api
  type: ClusterIP
