src/output/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-svc
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: db
  type: ClusterIP
