src/output/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: project-ingress
spec:
  rules:
  - host: myapp.local
    http:
      paths:
      - backend:
          service:
            name: frontend-svc
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: backend-svc
            port:
              number: 5000
        path: /api
        pathType: Prefix
  tls:
  - hosts:
    - myapp.local
    secretName: myapp-tls
